--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -2,10 +2,11 @@ table{
     width: 900px;
     height: 500px;;
     text-transform: upperCase;
-    padding:0px;
+    padding:0px auto;
     margin:50px auto;
-
-    background-color:lightblue;
+    border: solid 1px lightgrey;
+    border-radius:5px;
+    background-color:#f2f2f2;
     vertical-align: baseline;
     justify-content: left;
     font-size:12px;
@@ -14,7 +15,6 @@ table{
 
 tr{
 
-    padding:10px auto;
     justify-items: center;
 }
 
@@ -22,6 +22,29 @@ th, td{
     background-color:white;
 }
 
+.icons{
+    height:44px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+}
+.icons:hover{
+    cursor:pointer
+}
+.delete{
+
+    height: 25px;
+    width: 25px;
+    background-image:url("../../assets/delete.png");
+    background-size: 100%;
+}
+
+.edit{
+    height: 25px;
+    width: 25px;
+    background-image:url("../../assets/edit.png");
+    background-size: 100%;
+}
 body {
 	line-height: 1.5;
 }
