--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -1,55 +1,127 @@
-table{
-    width: 900px;
-    height: 500px;;
-    text-transform: upperCase;
-    padding:0px auto;
-    margin:50px auto;
-    border: solid 1px lightgrey;
-    border-radius:5px;
-    background-color:#f2f2f2;
-    vertical-align: baseline;
-    justify-content: left;
-    font-size:12px;
+:root {
+  --branco: #f1f1f1;
+  --cinza-50: #eeeeee;
+  --cinza-100: #dcdcdc;
+  --cinza-200: #d3d3d3;
+  --cinza-400: #c0c0c0;
+  --cinza-500: #a9a9a9;
+  --cinza-600: #808080;
+  --cinza-700: #696969;
+  --azul-100: #b0c4de;
+  --azul-200: #ade1ff;
+  --azul-300: #4f9ee7;
+  --azul-400: #4169e1;
 
+  margin: 0 auto;
+  padding: 0 auto;
+  line-height: 1.5;
+  list-style: none;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-transform: upperCase;
+  font-size: 10px;
+  color: var(--cinza-700);
+  text-shadow: 1px 1px 1px rgba(169, 169, 169, 0.4);
 }
 
-tr{
-
-    justify-items: center;
-}
-
-th, td{
-    background-color:white;
-}
-
-.icons{
-    height:44px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
-}
-.icons:hover{
-    cursor:pointer
-}
-.delete{
-
-    height: 25px;
-    width: 25px;
-    background-image:url("../../assets/delete.png");
-    background-size: 100%;
-}
-
-.edit{
-    height: 25px;
-    width: 25px;
-    background-image:url("../../assets/edit.png");
-    background-size: 100%;
-}
-body {
-	line-height: 1.5;
-}
-ol, ul {
-	list-style: none;
-}
+table {
+  margin: 0px auto;
+  width: 150vh;
+  height: 80vh;
 
 
+  text-align: left;
+  vertical-align: baseline;
+  justify-content: left;
+}
+
+td,
+tr,
+table {
+  background-color: var(--branco);
+  justify-items: center;
+}
+
+.Container {
+  width: 76%;
+  height: 100%;
+
+  margin: 0 auto;
+  padding-bottom: 10px;
+  padding-top: 9px;
+
+  background-color: var(--cinza-50);
+  border-left: 1px solid var(--azul-300);
+  border-top-right-radius:7px;
+  border-bottom-right-radius:7px;
+}
+
+.Elements {
+  width: 150vh;
+  height: 81vh;
+  margin-left: 10px;
+
+  background-color: var(--branco); 
+  border-bottom: px solid  var(--cinza-200);
+  border-radius: 5px;
+
+  box-shadow: 0px 0px 5px 0px rgba(169, 169, 169, 0.4);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(169, 169, 169, 0.4);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(169, 169, 169, 0.4);
+}
+
+.icons {
+  height: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.icons:hover {
+  cursor: pointer;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+
+.profile {
+  height: 14px;
+  width: 110px;
+  padding-top:1px;
+
+  font-size:8px;
+  text-align: center;
+  color: var(--azul-400);
+
+  background-color: var(--azul-200);
+  border-radius: 7px;
+}
+
+.delete {
+  height: 15px;
+  width: 15px;
+  background-image: url("../../assets/delete.png");
+  background-size: 100%;
+}
+
+.edit {
+  height: 15px;
+  width: 15px;
+  background-image: url("../../assets/edit.png");
+  background-size: 100%;
+}
+
+#ellipsis {
+  height: 12px;
+  width: 12px;
+  background-image: url("../../assets/ret.png");
+  background-size: 100%;
+}
+
+#ellipsis:hover {
+  cursor: pointer;
+}
